Fix cut off containers in license configuration

--- a/awx/ui/client/src/license/license.block.less
+++ b/awx/ui/client/src/license/license.block.less
@@ -8,6 +8,7 @@
 
 .License-container{
 	.OnePlusTwo-container;
+    margin-bottom: 20px;
 }
 
 .License-container--missing {
